--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.30MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-431.0KB/s(Youtube:不良林), server: 946afa90-3d05-450f-bcf4-397488bdc1f7.tw.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
-  - {name: 🇨🇳 中国-10.18MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-764.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.50MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-315.3KB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-207.2KB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-447.8KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-764.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-207.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-447.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
