--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: us8.fanqiang.eu, port: 19999, type: trojan, password: 5b19f39d-31ba-44ce-bff8-034d517f47e1, sni: us8.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇬🇧 英国-2.14MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-706.4KB/s(Youtube:不良林), server: lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: lvuft.com}}
+  - {name: 🇸🇬 新加坡-2.63MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.21MB/s(Youtube:不良林), server: nn2.boom.party, port: 41000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 297930:nKtI1N, obfs-param: www.baidu.com}
+  - {name: 🇨🇳 中国-11.04MB/s(Youtube:不良林), server: nmb.boom.party, port: 21000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 297930:nKtI1N, obfs-param: www.baidu.com}
+  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
